Use java.util.Base64 instead of removed javax.xml.DataTypeConverter